add video and fix spacing

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                 <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
               </div>
             </div>
+            <div class="video">
+              <iframe width="1174" height="658"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
           </div>
         </div>
       </section>
@@ -107,7 +112,7 @@
               <h3 style="margin-bottom: 0px;">Subscribe to our Newsletter</h3>
               <p>Available exclusivery on Figmaland</p>
               <div class="d-flex subscribe-section">
-                <input type="email" class="form-control">
+                <input placeholder="Your email" type="email" class="form-control">
                 <button class="btn btn-primary">Subscribe</button>
               </div>
               
@@ -210,11 +215,13 @@
                   <h5>Per Month</h5>
                 </div>
               </div>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
+              <div class="pricing-feature">
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+              </div>
               <button class="btn btn-primary">Order Now</button>
             </div>
             <div class="pricing-card long-card">
@@ -246,11 +253,13 @@
                   <h5>Per Month</h5>
                 </div>
               </div>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
-              <p>Pricing Feature</p>
+              <div class="pricing-feature">
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+                <p>Pricing Feature</p>
+              </div>
               <button class="btn btn-primary">Order Now</button>
             </div>
           </div>
