--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <section class="intro">
         <div class="container-fluid">
           <div class="content text-center">
-            <h1 class="text-white">The best products start with Figma</h1>
-            <h4 class="text-white">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+            <h1 class="text-white">The best products<br> start with Figma</h1>
+            <h4 class="text-white">Most calendars are designed for teams. Slate is designed<br> for freelancers</h4>
             <button class="btn btn-primary">Try For Free</button>
           </div>
         </div>
@@ -79,7 +79,7 @@
               </div>
             </div>
             <div class="video">
-              <iframe width="1174" height="658"
+              <iframe width="100%" height="100%"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY">
               </iframe>
             </div>
@@ -123,7 +123,7 @@
       <section class="partners">
         <div class="container">
           <h2 class="text-center">Partners</h2>
-          <h4 class="text-center">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+          <h4 class="text-center">Most calendars are designed for teams.<br> Slate is designed for freelancers</h4>
           <div class="list-partner">
             <div class="partner-item">
               <div class="partner-content">
