--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/common.css">
     <link rel="stylesheet" href="./assets/css/index.css">
     <!-- <link href="https://fonts.cdnfonts.com/css/graphik" rel="stylesheet"> -->
-    <title>Figma L</title>
+    <title>Figma Land</title>
   </head>
   <body>
     <nav id="#mynav">
